--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <section id="home">
         <div class="main">
             <h1 class="headings">I AM <br> DHARY-ANNE DAVILMAR</h1>
+            <p class="swe">Software Developer</p>
             <button class="btn"><a href="https://linkedin.com/in/dhary-anne-davilmar-7a4a80a1">
                 LinkedIn
             </a>
