small css edits

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" media="screen and (max-width: 800px)" href="tablet.css">
     <link rel="stylesheet" media="screen and (max-width: 530px)" href="phone.css">
+    <script src="https://kit.fontawesome.com/06e52ddd09.js" crossorigin="anonymous"></script>
     <title>DharyAnneCodes</title>
 </head>
 <body>
@@ -22,7 +23,7 @@
 
     <section id="home">
         <div class="main">
-            <h1 class="headings">I AM <br> DHARY-ANNE DAVILMAR</h1>
+            <h1 class="headings">Hi, I'm<br> DHARY-ANNE DAVILMAR</h1>
             <p class="swe">Software Developer</p>
             <button class="btn"><a href="https://linkedin.com/in/dhary-anne-davilmar-7a4a80a1">
                 LinkedIn
@@ -40,6 +41,7 @@
           <div id="intro">
                 <h2>DHARY-ANNE DAVILMAR</h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                <button type="submit" id="resume-btn"><a >Resume</a></button>
             </div>
         </div>
     </section>
